style.css
body{
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: center;
    display: flex;
}
.container{
    height: 800px;
    width: 1000px;
    background-color: antiquewhite;
    padding: 0;
}
.header{
    width: 100%;
    height: 100px;
    align-items: center;
    justify-content: center;
    background-color: aqua;
    margin: 0;
    display: flex;
}
.header h1{
    
    padding: 0;
    margin: 0;
}
.sketch{
    width: 600px;
    height: 600px;
    background-color: blue;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: flex-start;
    box-sizing: border-box;
}
.sketch divSquare{
    box-sizing: border-box;
    border: 1px ;
}
.footer{
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.footer h1{
    padding: 0;
    margin: 0;
}

